# 3d-renderer

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  result.txt
src/: geometry.h  main.cpp  object.cpp  object.h  primitive.cpp  primitive.h  rasterizer.cpp  rasterizer.h  renderer.cpp  renderer.h  screen.cpp  screen.h  world.cpp  world.h
src/geometry/: algo.cpp  algo.h  line.cpp  line.h  linear_interpolation.h  plane.cpp  plane.h  sphere.cpp  sphere.h
